syntax = "proto3";

package nftmeta.v1.snapshot;

option go_package = "github.com/web3eye-io/Web3Eye/proto/web3eye/nftmeta/v1/snapshot";

import "web3eye/web3eye.proto";
import "web3eye/basetype/v1/chain.proto";

service Manager {
  rpc CreateSnapshot(CreateSnapshotRequest) returns (CreateSnapshotResponse) {}
  rpc CreateSnapshots(CreateSnapshotsRequest) returns (CreateSnapshotsResponse) {}
  rpc UpdateSnapshot(UpdateSnapshotRequest) returns (UpdateSnapshotResponse) {}
  rpc GetSnapshot(GetSnapshotRequest) returns (GetSnapshotResponse) {}
  rpc GetSnapshotOnly(GetSnapshotOnlyRequest) returns (GetSnapshotOnlyResponse) {}
  rpc GetSnapshots(GetSnapshotsRequest) returns (GetSnapshotsResponse) {}
  rpc ExistSnapshot(ExistSnapshotRequest) returns (ExistSnapshotResponse) {}
  rpc ExistSnapshotConds(ExistSnapshotCondsRequest)
      returns (ExistSnapshotCondsResponse) {}
  rpc CountSnapshots(CountSnapshotsRequest) returns (CountSnapshotsResponse) {}
  rpc DeleteSnapshot(DeleteSnapshotRequest) returns (DeleteSnapshotResponse) {}
}

message SnapshotReq {
  optional uint32 ID            = 10;
  optional string EntID         = 11;
  optional uint64 Index         = 20;
  optional string SnapshotCommP = 30;
  optional string SnapshotRoot  = 40;
  optional string SnapshotURI   = 50;
  optional string BackupState   = 60;
}

message Snapshot {
  // @inject_tag: sql:"id"
  uint32 ID            = 10;
  // @inject_tag: sql:"ent_id"
  string EntID         = 11;
  // @inject_tag: sql:"index"
  uint64 Index         = 20;
  // @inject_tag: sql:"snapshot_comm_p"
  string SnapshotCommP = 30;
  // @inject_tag: sql:"snapshot_root"
  string SnapshotRoot  = 40;
  // @inject_tag: sql:"snapshot_uri"
  string SnapshotURI   = 50;
  // @inject_tag: sql:"backup_state"
  string BackupState = 60;
  // @inject_tag: sql:"created_at"
  uint32 CreatedAt = 70;
  // @inject_tag: sql:"updated_at"
  uint32 UpdatedAt = 80;
}

message Conds {
  optional web3eye.Uint32Val ID = 10;
  optional web3eye.StringVal EntID = 11;
  optional web3eye.Uint64Val Index = 20;
  optional web3eye.StringVal SnapshotCommP = 30;
  optional web3eye.StringVal SnapshotRoot = 40;
  optional web3eye.StringVal SnapshotURI = 50;
  optional web3eye.StringVal BackupState = 60;
  optional web3eye.StringSliceVal EntIDs = 200;
}

message CreateSnapshotRequest { SnapshotReq Info = 10; }
message CreateSnapshotResponse { Snapshot Info = 10; }

message CreateSnapshotsRequest { repeated SnapshotReq Infos = 10; }
message CreateSnapshotsResponse { repeated Snapshot Infos = 10; }

message GetSnapshotRequest { uint32 ID = 10; }
message GetSnapshotResponse { Snapshot Info = 10; }

message GetSnapshotsRequest {
  Conds Conds = 10;
  int32 Offset = 20;
  int32 Limit = 30;
}

message GetSnapshotsResponse {
  repeated Snapshot Infos = 10;
  uint32 Total = 20;
}

message GetSnapshotOnlyRequest { Conds Conds = 10; }
message GetSnapshotOnlyResponse { Snapshot Info = 10; }

message UpdateSnapshotRequest { SnapshotReq Info = 10;}
message UpdateSnapshotResponse { Snapshot Info = 10; }

message ExistSnapshotRequest { uint32 ID = 10; }
message ExistSnapshotResponse { bool Exist = 10; }

message ExistSnapshotCondsRequest { Conds Conds = 10; }
message ExistSnapshotCondsResponse { bool Exist = 10; }

message CountSnapshotsRequest { Conds Conds = 10; }
message CountSnapshotsResponse { uint32 Info = 10; }

message DeleteSnapshotRequest { SnapshotReq Info = 10; }
message DeleteSnapshotResponse { Snapshot Info = 10; }
